Pull Oct 2 7pm (#37)
* UseCaseDiagram

* UseCaseDiagram

* Update Untitled Diagram.drawio

* Update Untitled Diagram.drawio

* Pull Request (#33)

* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.java; used to implement post feature on dashboard/feed page

- Used RecycleView to display posts on dashboard/feed page

- Added default image to every post, implement Glide library for optimized loading of images

- Posts can currently display title, info/description, and image

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* Diego pull request (#35)

* Updated Login Screen and Theme

* Update Oct 2 3pm (#34)

* UseCaseDiagram

* UseCaseDiagram

* Update Untitled Diagram.drawio

* Update Untitled Diagram.drawio

* Pull Request (#33)

* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.jav

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,13 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_progress">Progress</string>
 
-<!--    Used for posts  -->
+    <!--    Used for posts  -->
     <string name="title_placeholder">Title</string>
     <string name="user_placeholder">User</string>
     <string name="posts_info_placeholder">Here is some news</string>
+    <string name="action_account">Account</string>
+    <string name="action_account_message">Account Default Message</string>
+
 
     <string-array name="posts_titles">
         <item>Post Title 1</item>
@@ -48,7 +51,6 @@
         <item>@drawable/img_running</item>
         <item>@drawable/img_running</item>
     </array>
-<!--    Used for posts  -->
 
 
 </resources>
