--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="action_account">Account</string>
     <string name="action_account_message">Account Default Message</string>
 
-
     <string-array name="posts_titles">
         <item>Post Title 1</item>
         <item>Post Title 2</item>
@@ -51,6 +50,8 @@
         <item>@drawable/img_running</item>
         <item>@drawable/img_running</item>
     </array>
+    <!--    Used for posts  -->
+
 
 
 </resources>
