--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,18 @@
     <!--    Used for posts  -->
     <string name="title_placeholder">Title</string>
     <string name="user_placeholder">User</string>
-    <string name="posts_info_placeholder">Here is some news</string>
+    <string name="posts_info_placeholder">Post Information Placeholder</string>
     <string name="action_account">Account</string>
     <string name="action_account_message">Account Default Message</string>
 
+    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet,
+    consectetur adipiscing elit. Praesent ultrices congue rutrum.
+    Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend
+    eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum
+    blandit, dolor diam fringilla tellus, eu euismod mauris neque
+    at neque.</string>
+    <string name="milestone_posts_subtitle_placeholder">(60 min)</string>
+    <string name="milestone_workout_title_placeholder">Jogging</string>
 
     <string-array name="posts_titles">
         <item>Post Title 1</item>
@@ -50,6 +58,20 @@
         <item>@drawable/img_running</item>
         <item>@drawable/img_running</item>
         <item>@drawable/img_running</item>
+    </array>
+
+    <!--    Used for milestones  -->
+    <array name="milestone_posts_images">
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
+        <item>@drawable/img_milestonedefault</item>
     </array>
 
 
