--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="posts_info_placeholder">Post Information Placeholder</string>
     <string name="action_account">Account</string>
     <string name="action_account_message">Account Default Message</string>
-
     <string name="prof_img_desc1">Profile</string>
     <string name="app_name">TeamFitness</string>
 
@@ -29,6 +28,8 @@
     at neque.</string>
     <string name="milestone_posts_subtitle_placeholder">(60 min)</string>
     <string name="milestone_workout_title_placeholder">Jogging</string>
+    <string name="fab_desc">floating button description</string>
+    <string name="log_out">Log Out</string>
 
     <string-array name="posts_titles">
         <item>Post Title 1</item>
