--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     at neque.</string>
     <string name="milestone_posts_subtitle_placeholder">(60 min)</string>
     <string name="milestone_workout_title_placeholder">Jogging</string>
+
+    <string name="fab_desc">floating button description</string>
+
     <string name="log_out">Log Out</string>
 
     <string-array name="posts_titles">
