--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,10 @@
     <string name="time">Time</string>
     <string name="notes">Notes</string>
 
+    <string name="fab_desc">floating button description</string>
+
+    <string name="log_out">Log Out</string>
+
     <string-array name="posts_titles">
         <item>Post Title 1</item>
         <item>Post Title 2</item>
