--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
     at neque.</string>
     <string name="milestone_posts_subtitle_placeholder">(60 min)</string>
     <string name="milestone_workout_title_placeholder">Jogging</string>
+    <string name="log_out">Log Out</string>
+    <string name="register">Register</string>
+    <string name="confirm_email">Confirm Email</string>
+    <string name="back_to_login">Back to Login</string>
+    <string name="back_to_login_sign_up">Back to Login</string>
 
     <string name="fab_desc">floating button description</string>
 
