Gino+Ike+Reyna+Diego (#73)
* Diegos Stuff (#70)

* Oct 3 6pm  (#48)

* UseCaseDiagram

* UseCaseDiagram

* Update Untitled Diagram.drawio

* Update Untitled Diagram.drawio

* Pull Request (#33)

* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.java; used to implement post feature on dashboard/feed page

- Used RecycleView to display posts on dashboard/feed page

- Added default image to every post, implement Glide library for optimized loading of images

- Posts can currently display title, info/description, and image

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* Diego pull request (#35)

* Updated Login Screen and Theme

* Update Oct 2 3pm (#34)

* UseCaseDiagram

* UseCaseDiagram

* Update Untitled Diagram.drawio

* Update Untitled Diagram.drawio

* Pull Request (#33)

* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* - Changed home page to tracker page; Changed notification page to p

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,10 @@
     <string name="back_to_login">Back to Login</string>
     <string name="back_to_login_sign_up">Back to Login</string>
 
+    <string name="amount">Amount</string>
+    <string name="time">Time</string>
+    <string name="notes">Notes</string>
+
     <string name="fab_desc">floating button description</string>
 
     <string name="log_out">Log Out</string>
