--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,10 @@
     <string name="time">Time</string>
     <string name="notes">Notes</string>
 
+    <string name="amount">Amount</string>
+    <string name="time">Time</string>
+    <string name="notes">Notes</string>
+
     <string name="fab_desc">floating button description</string>
 
     <string name="log_out">Log Out</string>
