--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_progress">Progress</string>
     <string name="return_home">Return Home</string>
     <string name="settings">Settings</string>
-    <string name="accessibility">Accessibility</string>
+    <string name="accessibility">Settings</string>
     <string name="personal_information">Personal Information</string>
     <string name="notifications">Notifications</string>
     <string name="bio">Bio</string>
@@ -132,7 +132,7 @@
     <string name="sets_3">5 sets</string>
     <string name="reps_3">15 reps</string>
     <string name="high_contrast">High Contrast</string>
-    <string name="accessibility_settings">Accessibility Settings</string>
+    <string name="accessibility_settings">Settings</string>
     <string name="dark">Dark</string>
     <string name="yrinfo">Tell us about yourself</string>
     <string name="my_bio">My Bio</string>
