--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,13 +56,13 @@
     </string-array>
 
     <!--    <string-array name="posts_info">-->
-    <!--        <item>Post Info 1</item>-->
-    <!--        <item>Post Info 2</item>-->
-    <!--        <item>Post Info 3</item>-->
-    <!--        <item>Post Info 4</item>-->
-    <!--        <item>Post Info 5</item>-->
-    <!--        <item>Post Info 6</item>-->
-    <!--        <item>Post Info 7</item>-->
+    <!--        <item>WorkoutRoutine Info 1</item>-->
+    <!--        <item>WorkoutRoutine Info 2</item>-->
+    <!--        <item>WorkoutRoutine Info 3</item>-->
+    <!--        <item>WorkoutRoutine Info 4</item>-->
+    <!--        <item>WorkoutRoutine Info 5</item>-->
+    <!--        <item>WorkoutRoutine Info 6</item>-->
+    <!--        <item>WorkoutRoutine Info 7</item>-->
     <!--    </string-array>-->
 
     <!--    <array name="posts_images">-->
